# red-db

./: Cargo.toml  Dockerfile  LICENSE  README.md  config.toml
red-db-client/: Cargo.toml
red-db-client/benches/: db_bench.rs
red-db-client/src/: error.rs  lib.rs  pool.rs  tests.rs
red-db-client/src/connection/: base.rs  file.rs  mod.rs  tcp.rs
red-db-core/: Cargo.toml
red-db-core/src/: db.rs  error.rs  lib.rs  tests.rs  utils.rs
red-db-core/src/proto/: mod.rs
red-db-server/: Cargo.toml
red-db-server/src/: error.rs  lib.rs  main.rs  settings.rs
red-db-server/tests/: integration.rs
