[package]
name = "red-db-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
bincode = { workspace = true }
red-db-core = { path = "../red-db-core" }
deadpool = { version = "0.12.2", default-features = false, features = [
    "managed",
    "rt_tokio_1",
] }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio", "html_reports"] }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "db_bench"
harness = false
